tests/functional/lang/parse-fail-unexpected-float.err
error: syntax error, unexpected floating-point literal, expecting 'inherit'
       at «stdin»:1:3:
            1| { 1.5 = x; }
             |   ^
            2|
